# SD-TwizyModel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
streetdrone_model/msgs/: CMakeLists.txt  package.xml
streetdrone_model/sd_autoware/: CMakeLists.txt  package.xml
streetdrone_model/sd_autoware/launch/: sd_autoware.launch
streetdrone_model/sd_autoware/nodes/: sd_autoware.py
streetdrone_model/sd_bringup/: CMakeLists.txt  README.md  package.xml
streetdrone_model/sd_bringup/config/: sd_twizy_rviz.rviz
streetdrone_model/sd_bringup/launch/: sd_twizy_default.launch  sd_twizy_demo.launch  sd_twizy_empty.launch  sd_twizy_empty_gazebo.launch  sd_twizy_gazebo.launch  sd_twizy_gazebo_default.launch  sd_twizy_gazebo_large_city.launch  sd_twizy_gazebo_shapes.launch  sd_twizy_large_city.launch  sd_twizy_shapes.launch  sd_twizy_spawn.launch
streetdrone_model/sd_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
streetdrone_model/sd_control/config/: sd_twizy_control.yaml
streetdrone_model/sd_control/include/sd_control/: sd_control_plugin.hpp
streetdrone_model/sd_control/launch/: sd_twizy_control.launch
streetdrone_model/sd_control/nodes/: Twist_to_Ackermann.py
streetdrone_model/sd_control/src/: robot_control.cpp  sd_control_plugin.cpp  sd_teleop_joy.cpp  sd_teleop_keyboard.py  sd_vehicle_interface.cpp
streetdrone_model/sd_control_msgs/: CMakeLists.txt  package.xml
streetdrone_model/sd_control_msgs/msg/: Control.msg
streetdrone_model/sd_description/: CHANGELOG.rst  README.md  package.xml
streetdrone_model/sd_description/urdf/: sd_twizy.urdf  sd_twizy.urdf.xacro
streetdrone_model/sd_description/urdf/bases/: sd_twizy_body.gazebo.xacro  sd_twizy_body.urdf.xacro
streetdrone_model/sd_description/urdf/sensors/: VLP-16.urdf.xacro  cameras.urdf.xacro
streetdrone_model/sd_description/urdf/wheels/: sd_twizy_suspension.urdf.xacro
streetdrone_model/sd_robot/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
streetdrone_model/sd_robot/launch/: sd_twizy_default.launch  sd_twizy_empty.launch  sd_twizy_worlds.launch
