<?xml version="1.0"?>
<package format="2">
  <name>sd_autoware</name>
  <version>0.1.0</version>
  <description>Interoperability between Autoware and sd_control</description>

  <maintainer email="sander@parkopedia.com">Sander van Dijk</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sd_control_msgs</exec_depend>
  <exec_depend>autoware_msgs</exec_depend>

</package>
